<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iiitd">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/option1"
            android:textSize="18dp" />

        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option1"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/option2"
            android:textSize="18dp" />

        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/option3"
            android:textSize="18dp" />
        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option3"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/option4"
            android:textSize="18dp"
            />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="50pt"
        android:layout_below="@+id/option4"
        android:layout_marginTop="10pt"
        android:src="@drawable/iiitd" />

    </RelativeLayout>

</ScrollView>