<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/iiitd" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/about"
            android:background="@color/iiitd"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_margin="4pt"
            android:clickable="true"
            android:textColor="@color/text1"
            android:layout_height="match_parent"
            android:text="@string/option1"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/prog"
            android:layout_margin="4pt"
            android:background="@color/iiitd"
            android:padding="10dp"
            android:gravity="center"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option2"
            android:textSize="18dp"
            android:textColor="@color/text1"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/ug"
            android:padding="10dp"
            android:clickable="true"
            android:gravity="center"
            android:background="@color/iiitd"
            android:layout_margin="4pt"
            android:textColor="@color/text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option3"
            android:textSize="18dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/cntct"
            android:padding="10dp"
            android:clickable="true"
            android:gravity="center"
            android:background="@color/iiitd"
            android:layout_margin="4pt"
            android:textColor="@color/text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/option4"
            android:textSize="18dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>