<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="MC.assignments.contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:src="@drawable/iiitd_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/textbckg"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/adress"
                android:textColor="@color/text1"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/textbckg"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/PhoneNo"
                android:textColor="@color/text1"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="3"
            android:id="@+id/sendmail"
            android:orientation="horizontal"
            android:clickable="true">

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/textbckg"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/mail"
                android:textColor="@color/text1"
                android:textSize="18sp" />

            <ImageView
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/mailicon" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/textbckg"
            android:textColor="@color/text1"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed"
            android:textSize="18sp"
            android:text="@string/towebsite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/textbckg"
            android:textSize="18sp"
            android:text="@string/linktowebsite"
            android:autoLink="web"

            />
    </LinearLayout>
</ScrollView>
